<resources>
    <string name="app_name">CureMeApp</string>
    <string name="app_title">App</string>
    <string name="cureme_title">CureMe</string>

    <!--prompt text-->
    <string name="service_creation_text">Δημιουργία νέας παροχής</string>
    <string name="user_text_promt">Συμπληρώστε τα στοιχεία της παροχής</string>
    <string name="clinic_creation_text">Δημιουργία φυσιοθεραπευτηριου</string>

    <string name="r1_text_promt">Συμπληρώστε τα στοιχεία του φυσιοθεραπευτηρίου</string>

    <!--input text-->
    <string name="code_input_hint">Κωδικός</string>
    <string name="name_input_hint">Όνομα</string>
    <string name="description_input_hint">Περιγραφή</string>
    <string name="cost_input_hint">Κόστος ανά συνεδρία</string>

    <!--R1-->
    <string name="r1_address_input_hint">Διεύθυνση</string>
    <string name="r1_afm_input_hint">ΑΦΜ</string>

    <!--button text-->
    <string name="r2btn_text">Προσθηκη Συνεδριας</string>
    <string name="r1btn_text">Δημιουργία</string>
    <string name="button1_text">Δημιουργία φυσιοθεραπευτηριου</string>
    <string name="button2_text">Δημιουργία νέας παροχής</string>





    <!--prompt text-->
    <string name="user_text_prompt">Συμπληρώστε τα στοιχεία της παροχής</string>


    <!--button text-->
    <string name="button_text">Προσθήκη παροχής</string>

    <!--custom dialog text-->
    <string name="confirm_button_text">Επιβεβαίωση</string>
    <string name="exit_button_text">Έξοδος</string>
    <string name="new_service">Θέλετε να προσθέσετε νέα παροχή;</string>
    <string name="confirm_button">confirm_button</string>
    <string name="cancel_button">cancel_button</string>
    <string name="contact_info">Contact Info</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="buttoninfo">λεπτομέρειες</string>
    <string name="next_appointment">NEXT APPOINTMENT:</string>
    <string name="patient_not_found">Ο ΑΣΘΕΝΗΣ ΔΕ ΒΡΕΘΗΚΕ</string>
    <string name="Back"><![CDATA[<]]></string>
    <string name="Next"><![CDATA[>]]></string>
    <string name="cureme">CureMe</string>
    <string name="app">App</string>
    <string name="cal">Ημερολόγιο</string>
    <string name="_2023">June 2023</string>
    <string name="cure_me_title">CureMe</string>
    <string name="new_requests">Νέα Αιτήματα</string>
    <string name="description">Αίτημα για ραντεβού στις:</string>
    <string name="welcome_back">Καλώς ήρθες πίσω!</string>
    <string name="enter_credentials">Συμπλήρωσε τα στοιχεία σου για να συνδεθείς</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Σύνδεση</string>
    <string name="sign_up">Εγγραφή</string>
    <string name="psf_title">Λειτουργίες ΠΣΦ</string>
    <string name="add_patient">Προσθήκη ασθενή</string>
    <string name="add_edit_session">Προσθήκη επίσκεψης  Καταγραφή ενεργειών</string>
    <string name="search_patient">Αναζήτηση ασθενή</string>
    <string name="weekly_plan">Πλάνο Ραντεβού</string>
    <string name="manage_requests">Διαχείριση αιτημάτων ραντεβού</string>
    <string name="detailed_info">Αναλυτική Κατάσταση</string>
    <string name="menu_search">search</string>
    <string name="menu_settings">settings</string>
    <string name="menu_navigation">nav</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="detailed_history">Detailed History</string>
    <string name="my_upcoming">Τα Ραντεβού μου</string>
    <string name="request">Request</string>

    <string name="button">Προσθήκη επίσκεψης</string>
    <string name="buttonTime">Ώρα επίσκεψης</string>
    <string name="avatar">avatar</string>

    <string-array name="actions">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
    </string-array>

</resources>