<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorMenuActivity">

    <LinearLayout
        android:id="@+id/title_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/root_scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <ScrollView
        android:id="@+id/root_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_container">




        <LinearLayout
            android:id="@+id/parent_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/prompt_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hello_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:paddingBottom="5dp"
                    android:text="Γειά σου,"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/hello_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:paddingBottom="5dp"
                    android:text="[FullName]"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/button_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="150dp"
                android:background="@drawable/under_popup_shape"
                android:layout_weight="1">

                <Button
                    android:id="@+id/add_patient_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"

                    android:background="@drawable/round_button"
                    android:fontFamily="@font/poppins_bold"
                    android:padding="10dp"
                    android:text="@string/add_patient"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/add_edit_session"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"

                    android:layout_marginTop="20dp"
                    android:background="@drawable/round_button"
                    android:fontFamily="@font/poppins_bold"
                    android:padding="10dp"
                    android:text="@string/add_edit_session"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_patient_btn"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/search_patient"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"

                    android:layout_marginTop="20dp"
                    android:background="@drawable/round_button"
                    android:fontFamily="@font/poppins_bold"
                    android:padding="10dp"
                    android:text="@string/search_patient"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_edit_session"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/weekly_plan"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"

                    android:layout_marginTop="20dp"
                    android:background="@drawable/round_button"
                    android:fontFamily="@font/poppins_bold"
                    android:padding="10dp"
                    android:text="@string/weekly_plan"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/search_patient"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/manage_requests"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"

                    android:layout_marginTop="20dp"
                    android:background="@drawable/round_button"
                    android:fontFamily="@font/poppins_bold"
                    android:padding="10dp"
                    android:text="@string/manage_requests"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weekly_plan"
                    app:layout_constraintVertical_bias="0.0" />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>